# arcdps-chat-log

./: Cargo.toml  Makefile  README.md  build.rs
.github/: tag-and-push.sh
.github/workflows/: pre-commit.yaml
migrations/: 2022-08-07-create-messages.sql  2022-08-07-messages-timestamp-index.sql  2023-01-05-create-notes.sql  2023-01-12-add-notes-color.sql  2023-10-27-add-message-search-indices.sql  2026-04-18-messages-fts.sql
src/: db.rs  lib.rs  panic_handler.rs  update.rs
src/audio/: mod.rs  player.rs  sounds.rs
src/db/: insert.rs  mod.rs  query.rs
src/logui/: buffer.rs  mod.rs  settings.rs  ui.rs
src/mumblelink/: mod.rs
src/notifications/: audio.rs  events.rs  mod.rs  settings.rs
src/plugin/: events.rs  mod.rs  settings.rs  state.rs  ui.rs
src/tracking/: mod.rs
src/tts/: events.rs  mod.rs  settings.rs
