[package]
name = "arcdps-chat-log"
version = "0.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcdps_chat_log"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["settings", "log"] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", features = ["extras", "log", "serde", "strum"] }
backtrace = "0.3"
bitflags = "1.3"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
kernel32-sys = "0.2.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
once_cell = "1.13"
r2d2 = "0.8"
r2d2_sqlite = "0.21"
regex = "1.7"
rodio = { version = "0.15", features = [ "symphonia-all" ] }
rusqlite = { version = "0.28", features = ["bundled", "chrono"] }
rusqlite_migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
tts = { git = "https://github.com/cheahjs/tts-rs", branch = "master" }
winapi = { version = "0.3", features = ["consoleapi", "dbghelp", "memoryapi", "psapi"] }
windows = { version = "0.43", features = ["System"] }

[build-dependencies]
winres = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
