[package]
name = "arcdps-chat-log"
version = "0.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcdps_chat_log"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["settings", "log"] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", features = ["extras", "log", "serde", "strum"] }
backtrace = "0.3"
bitflags = "2.10"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
once_cell = "1.21"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
regex = "1.12"
rodio = { version = "0.21", features = [ "symphonia-all" ] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
rusqlite_migration = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3"
tts = { git = "https://github.com/cheahjs/tts-rs", branch = "master" }
winapi = { version = "0.3", features = ["consoleapi", "dbghelp", "memoryapi", "psapi", "handleapi"] }
windows = { version = "0.59", features = ["System"] }

[build-dependencies]
winres = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
